samples/_failures_safe/1761072079_4bd9aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c94ef91f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c94ef91f.c:160:9: error: expected declaration or statement at end of input
  160 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_c94ef91f.c:160:9: error: expected declaration or statement at end of input
